Closed Bug 1931982 Opened 9 months ago Closed 8 months ago

The checked profile selector dialog checkbox prevents launching any profile

Categories

(Toolkit :: Startup and Profile System, defect, P2)

defect

Tracking

()

VERIFIED FIXED
135 Branch
Tracking Status
firefox135 --- fixed

People

(Reporter: jhirsch, Assigned: mossop)

References

(Blocks 1 open bug)

Details

(Whiteboard: [fidefe-profile-management])

Attachments

(1 file)

  1. Enable profiles by setting browser.profiles.enabled pref to true
  2. Create several profiles
  3. Click on "Profiles" then "Manage Profiles", launching the profile selector dialog
  4. In the profile selector dialog, check the "Show at startup" checkbox in the profile
  5. Close all open profiles and restart Firefox
  6. The profile selector dialog will display, with the "Show at startup" checkbox checked"
  7. Click the profile card to launch any of the profiles in the profile group

Expected behavior: the profile selector dialog is dismissed and the selected profile launches

Actual behavior: the profile selector dialog is dismissed, then reappears. Firefox only starts into a profile if the "Show at Startup" checkbox is unchecked before clicking on a profile (and in that case the wrong profile is launched, see bug 1931984).

We should be ignoring the "show at startup" checkbox state (that is, the ShowSelector state in profiles.ini) if the user is trying to launch a profile from the profile selector window.

Severity: -- → S2
Priority: -- → P2
Whiteboard: [fidefe-profile-management]
Assignee: nobody → dtownsend

When displaying the profile selector on startup we cannot use the normal method of launching a
selected profile by simply launching an new instance of Firefox. This would lose all state from
the original process including any passed command line arguments. Instead we must signal back to
nsAppRunner what profile it should launch. We also need to properly shut down the sqlite database
before shutdown begins as our normal hook isn't in place and the process crashes if the database
hasn't been shut down correctly.

Pushed by dtownsend@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e4a8608d96d5 Fix the startup profile UI to correctly signal back to nsAppRunner what profile needs to launch. r=jhirsch
Pushed by dtownsend@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/32c217dc0c44 Fix the startup profile UI to correctly signal back to nsAppRunner what profile needs to launch. r=jhirsch
Status: NEW → RESOLVED
Closed: 8 months ago
Resolution: --- → FIXED
Target Milestone: --- → 135 Branch
Flags: needinfo?(dtownsend)

Removing the qe-verify+ flag as the Profile Switching feature was not released in Firefox 135, and the Profile Selector is still a work in progress.

Flags: qe-verify+

Reproduced the initial issue on Nightly 134.0a1 (Build ID: 20241119094105).

Verified as fixed on the latest Nightly 137.0a1 - a new profile can be opened from the Profile selector window when the "Choose a profile when Nightly opens" is checked.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: