Bug 1931982: Fix the startup profile UI to correctly signal back to nsAppRunner what profile needs to launch. r=jhirsch

When displaying the profile selector on startup we cannot use the normal method of launching a
selected profile by simply launching an new instance of Firefox. This would lose all state from
the original process including any passed command line arguments. Instead we must signal back to
nsAppRunner what profile it should launch. We also need to properly shut down the sqlite database
before shutdown begins as our normal hook isn't in place and the process crashes if the database
hasn't been shut down correctly.

Differential Revision: https://phabricator.services.mozilla.com/D229921