toolkit/xre/nsAppRunner.cpp
@@ -2856,6 +2856,28 @@ static ReturnAbortOnError ShowProfileDialog(
       rv = dlgArray->QueryElementAt(1, NS_GET_IID(nsIFile),
                                     getter_AddRefs(profLD));
       NS_ENSURE_SUCCESS_LOG(rv, rv);
+
+      if (dialogReturn == nsIToolkitProfileService::launchWithProfile) {
+        int32_t newArguments;
+        rv = ioParamBlock->GetInt(2, &newArguments);
+
+        if (NS_SUCCEEDED(rv) && newArguments > 0) {
+          char** newArgv = (char**)realloc(
+              gRestartArgv, sizeof(char*) * (gRestartArgc + newArguments + 1));
+          NS_ENSURE_TRUE(newArgv, NS_ERROR_OUT_OF_MEMORY);
+
+          gRestartArgv = newArgv;
+
+          for (auto i = 0; i < newArguments; i++) {
+            char16_t* arg;
+            ioParamBlock->GetString(i, &arg);
+            gRestartArgv[gRestartArgc++] =
+                strdup(NS_ConvertUTF16toUTF8(nsDependentString(arg)).get());
+          }
+
+          gRestartArgv[gRestartArgc] = nullptr;
+        }
+      }
     }
   }
 
@@ -5071,22 +5093,27 @@ int XREMain::XRE_mainStartup(bool* aExitFlag) {
   }
 #endif
 
-  bool useSelectedProfile;
-  rv = mProfileSvc->GetStartWithLastProfile(&useSelectedProfile);
-  NS_ENSURE_SUCCESS(rv, 1);
+  // We now know there is no existing instance using the selected profile.
 
-  // We now know there is no existing instance using the selected profile. If
-  // the profile wasn't selected by specific command line arguments and the
-  // user has chosen to show the profile manager on startup then do that.
-  if (wasDefaultSelection && !useSelectedProfile) {
-    rv = ShowProfileManager(mProfileSvc, mNativeApp);
-  } else if (profile) {
-    bool showSelector = false;
-    profile->GetShowProfileSelector(&showSelector);
-    if (showSelector) {
-      rv = ShowProfileSelector(mProfileSvc, mNativeApp);
-    } else {
-      rv = NS_OK;
+  // We only ever show the profile selector if a specific profile wasn't chosen
+  // via command line arguments or environment variables.
+  if (wasDefaultSelection) {
+    // First check the old style profile manager
+    bool useSelectedProfile;
+    rv = mProfileSvc->GetStartWithLastProfile(&useSelectedProfile);
+    NS_ENSURE_SUCCESS(rv, 1);
+
+    if (!useSelectedProfile) {
+      rv = ShowProfileManager(mProfileSvc, mNativeApp);
+    } else if (profile) {
+      // Now check the new profile group selector
+      bool showSelector = false;
+      profile->GetShowProfileSelector(&showSelector);
+      if (showSelector) {
+        rv = ShowProfileSelector(mProfileSvc, mNativeApp);
+      } else {
+        rv = NS_OK;
+      }
     }
   }
 
